# Text-to-Animation

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
docs/: 项目进展.md
scripts/: generate_images.bat  generate_images.sh  generate_ppt.bat  generate_ppt.sh  install.bat  install.sh
src/text2anim/: __init__.py  config.py  image_generator.py  main.py  ppt_builder.py  prompt_enhancer.py
