[project]
name = "text2anim"
version = "0.1.0"
description = "根据文字描述生成卡通图片，并合成 PPT"
readme = "README.md"
authors = [
    { name = "Isidore", email = "2897055310@qq.com" }
]
requires-python = ">=3.12"
dependencies = [
    "python-pptx>=1.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "questionary>=2.1.1",
]

[project.scripts]
text2anim = "text2anim.main:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"
